--- a/demo/context/package.json
+++ b/demo/context/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
+    "pretty": "^2.0.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "fs-extra": "^6.0.1",
