--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "index.js"
   ],
   "author": "xingzhou",
-  "keywords": ["pagego", "router", "react", "SPA", "mobile"],
+  "keywords": [
+    "pagego",
+    "router",
+    "react",
+    "SPA",
+    "mobile"
+  ],
   "license": "MIT",
   "dependencies": {
     "eventemitter3": "^3.1.2",
@@ -27,6 +33,7 @@
     "@types/react-dom": "^16.8.4",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
+    "gulp-watch": "^5.0.1",
     "typescript": "^3.4.1"
   }
 }
