--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "files": [
     "build",
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "author": "xingzhou",
   "keywords": [
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.5",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
