--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pagego",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "a React based SPA system for mobile wap development.",
   "main": "index.js",
   "repository": {
@@ -27,15 +27,17 @@
   "dependencies": {
     "eventemitter3": "^3.1.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.1.5",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.5"
   }
 }
